--- a/ARNavigation.html
+++ b/ARNavigation.html
@@ -51,12 +51,12 @@
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's the issue</h3>
-								<p>In the observation of the most widely used digital mapping navigation system -- Googole map, we found users sometimes find it hard to judge their location, face direction and thus unable to recognize the suggested route correctly. This issue is especially critical when navigating through complex intersections in Asain cities like the one I live in.</p>
+								<p>In the observation of the most widely used digital mapping navigation system -- Google map, we found users sometimes find it hard to judge their location, face direction and thus unable to recognize the suggested route correctly. This issue is especially critical when navigating through complex intersections in Asain cities like the one I live in.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<h3>How we address the issue</h3>
-								<p>We enhanced location-based AR technology to project trail suggestion onto the sidewalk through user’s mobile camera while navigating. To be specific, We utilize Google Map api to get the suggeted route and the corresponding polyline of the route. We exploited an algorithm combining gyro sensor data, gps data and data from Google ARCore to determine user's location, face direction and movements. The corresponding route suggestion then be projected through the mobile camera of the user.</p>
-								<p>This research is currently under user study. We expect this function to enhance the mapping between navigational suggestion and the real wourld situation, therefore augments the pedastrian navigation task and the user experience.</p>
+								<p>We enhanced location-based AR technology to project trail suggestion onto the sidewalk through user’s mobile camera while navigating. To be specific, We utilize Google Map API to get the suggested route and the corresponding polyline of the route. We exploited an algorithm combining gyro sensor data, GPS data and data from Google ARCore to determine user's location, face direction, and movements. The corresponding route suggestion then is projected through the mobile camera of the user.</p>
+								<p>This research is currently under user study. We expect this function to enhance the mapping between navigational suggestion and the real world situation, therefore augments the pedestrian navigation task and the user experience.</p>
 								<p>This work is scheduled to submit to Ubicomp 2019.</p>
 							</div>
 						</div>
@@ -64,10 +64,10 @@
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's my role in the project</h3>
-								<p>I am in charge in both the user study and the implementation of this research.</p>
+								<p>I am in charge of both the user study and the implementation of this research.</p>
 								<p>I am the leader of the user study phase. We intend to use Observer-rating, Performance measures and some Post-trial self-rating questionnaires combining our customized question of the mapping accuracy, NASA Task Load Index (NASA-TLX) and User Burden Scale to evaluate our hypothesis.</p>
 								<p>For the implementation, I tweaked our Unity app to enhance its reliability and to fit it into our experimental environment.</p>
-								<p>This research is a perfect practice of my ability to lead the design and conduct of a user study. It provides me a chance to meet Unity platform as well.</p>
+								<p>This research is a perfect practice of my ability to lead the design and conduct of a user study. It provides me a chance to meet the Unity platform as well.</p>
 							</div>
 						</div>
 					</div>
