--- a/HopeEnglish.html
+++ b/HopeEnglish.html
@@ -23,11 +23,12 @@
 							<li>
 								<a href="#" class="icon fa-angle-down">Projects</a>
 								<ul>
+									<li><a href="ARNavigation.html">AR Navigation</a></li>
+									<li><a href="WhoMatters.html">Who Matters</a></li>
+									<li><a href="VUI.html">Charles Bot</a></li>
+									<li><a href="Insightgram.html">Insight-gram</a></li>
 									<li><a href="KE.html">Knowledge Explorer</a></li>
 									<li><a href="Meteore.html">Météore</a></li>
-									<li><a href="WhoMatters.html">Who Matters</a></li>
-									<li><a href="Insightgram.html">Insight-gram</a></li>
-									<li><a href="VUI.html">Charles Bot</a></li>
 								</ul>
 							</li>
 							<li><a href="#" class="button">繁體中文</a></li>
@@ -52,48 +53,48 @@
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's the issue</h3>
-								<p> We conducted a comprehensive evaluation on the mobile app of Hope English, the leading brand of English learning in Taiwan. Evaluating method conducted includes Interaction map, Interviews, Persona, Scenario, Comparative Analysis, Survey, Heuristic Evaluation, and Usability Evaluation.</p>
+								<p> We conducted a comprehensive evaluation of the mobile app of Hope English, the leading brand of English learning in Taiwan. Evaluating method conducted includes Interaction map, Interviews, Persona, Scenario, Comparative Analysis, Survey, Heuristic Evaluation, and Usability Evaluation.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<h3>How we address the issue</h3>
-								<p>To understand the app thoroughly and provide insightful suggestion to improve the user experience, we utilized techniques mentioned below.</p>
+								<p>To understand the app thoroughly and provide insightful suggestion to improve the user experience, we utilized the techniques mentioned below.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<img class="image left-big" src="images/inter2.png" alt=""/>
 								<h4>Interaction Map</h4>
-								<p>In the Interaction Map, we analyzed the views of the app and the relationship between each views or activities. This step gave us a comprehensive understanding of the product.</p>
+								<p>In the Interaction Map, we analyzed the views of the app and the relationship between each view or activities. This step gave us a comprehensive understanding of the product.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<img class="image left-big" src="images/Interview.png" alt=""/>
 								<h4>Interview, Persona & Scenario</h4>
-								<p>In the next phase, we have to determine the target audiance of the product. In order to do so, we conducted an Interview to understand peoples' incentive and behavior in online language learning activities. By digging in to their scenario, attitude and experience, we established three main Persona and Scenario of our target audiance.</p>
+								<p>In the next phase, we have to determine the target audience of the product. In order to do so, we conducted an Interview to understand peoples' incentive and behavior in online language learning activities. By digging into their scenario, attitude, and experience, we established three main Persona and Scenario of our target audience.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<img class="image left-big" src="images/Survey.png" alt=""/>
 								<h4>Survey</h4>
-								<p>A Survey was conducted following qualitative analysis to further collect the quantitative data. We collected and analyzed data of participants' Characteristics, Attitudes and Behaviors in online language learning activities. Ferthermore, we collect participants' self-report usability evaluation via System Usability Scale (SUS).</p>
+								<p>A Survey was conducted following qualitative analysis to further collect the quantitative data. We collected and analyzed data of participants' characteristics, attitudes, and behaviors in online language learning activities. Furthermore, we collect participants' self-report usability evaluation via the System Usability Scale (SUS).</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<img class="image left-big" src="images/Comparative.png" alt=""/>
 								<h4>Comparative Analysis</h4>
-								<p>At the same time, a Comparative Analysis is conducted to better understand how other comparators design their product. We compares our client's design with others' to learn form the good ones and avoid poor design choices.</p>
+								<p>At the same time, a Comparative Analysis is conducted to better understand how other comparators design their product. We compare our client's design with others' to learn from the good ones and avoid poor design choices.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<img class="image left-big" src="images/Heuristic.png" alt=""/>
 								<h4>Heuristic Evaluation</h4>
-								<p>A Heuristic Evaluation is conducted by the researchers. Based on the 10 Heuristic principles established by Jakob Nielsen, me and my team set up scenarios, then each of us provided individual evaluation to the violations of heuristic principles met in the scenario. We then generated our findings after debriefing and discussion.</p>
+								<p>A Heuristic Evaluation is conducted by the researchers. Based on the 10 Heuristic principles established by Jakob Nielsen, I and my team set up scenarios, then each of us provided an individual evaluation of the violations of heuristic principles met in the scenario. We then generated our findings after debriefing and discussion.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<img class="image left-big" src="images/Usability.png" alt=""/>
 								<h4>Usability Test</h4>
-								<p>The last evaluation we conducted was Usability Test. Unlike the Heuristic Evaluation, Usability invite user to participate in our study experiment. The participant are asked to perform the tasks accoding to our plan. The researchers evaluated difficulties participants faces when performing tasks. Participants also been asked to respone short questionnaires and a comprehensive post-task questionnaire to provide their preceived experience during the task. We then generated our findings after data analysis and discussion.</p>
+								<p>The last evaluation we conducted was a Usability Test. Unlike the Heuristic Evaluation, Usability invited the user to participate in our study experiment. The participants were asked to perform the tasks according to our plan. The researchers evaluated difficulties participants faces when performing tasks. Participants were also asked to respond short questionnaires and a comprehensive post-task questionnaire to provide their perceived experience during the task. We then generated our findings after data analysis and discussion.</p>
 							</div>
 						</div>
 						<!--span class="image featured"><img src="images/" alt="" /></span-->
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's my role in the project</h3>
-								<p>I was a highly engaged member in our team. Me and my team member conducted all the evaluations mentioned above. I particularly dedicated myself in the design of interview and questionnaire questions. This experience improves my ability to capture people's true thoughts via asking the right questions.</p>
+								<p>I was a highly engaged member of our team. I and my team member conducted all the evaluations mentioned above. I particularly dedicated myself in the design of interview and questionnaire questions. This experience improves my ability to capture people's true thoughts byfform asking the right questions.</p>
 							</div>
 						</div>
 					</div>
