--- a/Insightgram.html
+++ b/Insightgram.html
@@ -23,11 +23,12 @@
 							<li>
 								<a href="#" class="icon fa-angle-down">Projects</a>
 								<ul>
+									<li><a href="ARNavigation.html">AR Navigation</a></li>
+									<li><a href="WhoMatters.html">Who Matters</a></li>
+									<li><a href="VUI.html">Charles Bot</a></li>
+									<li><a href="HopeEnglish.html">Usability Evaluation</a></li>
 									<li><a href="KE.html">Knowledge Explorer</a></li>
 									<li><a href="Meteore.html">Météore</a></li>
-									<li><a href="WhoMatters.html">Who Matters</a></li>
-									<li><a href="HopeEnglish.html">Usability Evaluation</a></li>
-									<li><a href="VUI.html">Charles Bot</a></li>
 								</ul>
 							</li>
 							<li><a href="#" class="button">繁體中文</a></li>
@@ -52,28 +53,28 @@
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's the issue</h3>
-								<p>As a senior student, we noticed that as events such as the graduation ceremony approaches, we tend to see more posts relative to the event on the social media. Also, the emotion of such posts are obvious. Not only do events such as the graduation ceremony have this tendency, but we can find similar phenomenon around mid-term exam period, sports seasons and more.</p>
+								<p>As a senior student, we noticed that as events such as the graduation ceremony approach, we tend to see more posts relative to the event on social media. Also, the emotion of such posts is obvious. Not only do events such as the graduation ceremony have this tendency, but we can find a similar phenomenon around mid-term exam period, sports seasons and more.</p>
 
-								<p>At the same time a new student, say a exchange student, may find it difficult to engage to the local community due to the lack of knowledge about what's going around.</p>
+								<p>At the same time a new student, say an exchange student, may find it difficult to engage in the local community due to the lack of knowledge about what's going around.</p>
 
-								<p>What if we could visualize the hot topics that the univsrsity community cares about along with their emotion form the posts on social media and provide them to the newcomers? We believe it would helps them fit in the community with less effort.</p>
+								<p>What if we could visualize the hot topics that the university community cares about along with their emotion form the posts on social media and provide them to the newcomers? We believe it would help them fit in the community with less effort.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<h3>How we address the issue</h3>
-								<p>We crawled and extracted keywords from posts with location tags on Instagram, since trends on instagram satifies the endemic and transient characteristics. We then cluster posts with similar keywords together. At the same time, we utilize CNN to predict the emotion of the photos. After the analysis, we used word cloud to visualize our findings.</p>
+								<p>We crawled and extracted keywords from posts with location tags on Instagram since trends on Instagram satisfies the endemic and transient characteristics. We then cluster posts with similar keywords together. At the same time, we utilize CNN to predict the emotion of the photos. After the analysis, we used word clouds to visualize our findings.</p>
 							</div>
 						</div>
 						<span class="image featured"><img src="images/insightgrammap.jpg" alt="" /></span>
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What we find</h3>
-								<p><img class="image left round" src="images/emotionC.png" alt=""/>The text analysis results shows that schools in proximity tend to have common interests. By extracting keywords and cluster the posts containing similar kewords together, we successfully extracts reignal hot topics.</p>
+								<p><img class="image left round" src="images/emotionC.png" alt=""/>The text analysis results show that schools in proximity tend to have common interests. By extracting keywords and cluster the posts containing similar keywords together, we successfully extract regional hot topics.</p>
 								<p>The image emotion classification shows that our model tends to classify dim pictures as negative in emotion, while some of them are actually joyful pictures taken in the night. This is the part we should put further efforts on.</p>
 								<p>The mechanism can be further developed to help people new to the place fit in the community easier.
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<h3>What's my role in the project</h3>
-								<p>I was mainly in charge of the data analysis of this work. From word embedding and clustering for text analysis to using Keras to implement CNN for photo emotion classification, I processed data crawled by my teammate and output findings to another teammate, she then vistualized and presented them. We also discussed every challenges we met together.</p>
+								<p>I was mainly in charge of the data analysis of this work. From word embedding and clustering for text analysis to using Keras to implement CNN for photo emotion classification, I processed data crawled by my teammate and output findings to another teammate, she then visualized and presented them. We also discussed every challenge we met together.</p>
 							</div>
 						</div>
 					</div>
