--- a/KE.html
+++ b/KE.html
@@ -23,11 +23,12 @@
 							<li>
 								<a href="#" class="icon fa-angle-down">Projects</a>
 								<ul>
-									<li><a href="Meteore.html">Météore</a></li>
+									<li><a href="ARNavigation.html">AR Navigation</a></li>
 									<li><a href="WhoMatters.html">Who Matters</a></li>
-									<li><a href="Insightgram.html">Insight-gram</a></li>
-									<li><a href="HopeEnglish.html">Usability Evaluation</a></li>
 									<li><a href="VUI.html">Charles Bot</a></li>
+									<li><a href="HopeEnglish.html">Usability Evaluation</a></li>
+									<li><a href="Insightgram.html">Insight-gram</a></li>
+									<li><a href="Meteore.html">Météore</a></li>
 								</ul>
 							</li>
 							<li><a href="#" class="button">繁體中文</a></li>
@@ -53,22 +54,22 @@
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's the issue</h3>
-								<p>Imagine a scenario that you are searching for tutorial for cooking an Omelette on the Internet. One frustrating thing you may face is that the information is presented in the way you can't absorb. Say the tutorial suggesst "a spoon" of oil, how exaclty is the size of the spoon? It'd be better if they provide a photo. Likewise, the technique of flipping the egg may not be sufficiently articulated without short clips of video.</p>
+								<p>Imagine a scenario that you are searching for a tutorial for cooking an Omelette on the Internet. One frustrating thing you may face is that the information is presented in the way you can't absorb. Say the tutorial suggests "a spoon" of oil, how exactly is the size of the spoon? It'd be better if they provide a photo. Likewise, the technique of flipping the egg may not be sufficiently articulated without short clips of video.</p>
 								<p>Moreover, there are thousands of experts providing their "best practice" of making an Omelette, which should you follow?</p>
-								<p>This is the issue of on-line self learning of how-to knowledge. We want to help learner navigate through how-to knowledge which is stored in multi-modal way from multiple experts on the Internet.</p>
+								<p>This is the issue of online self-learning of how-to knowledge. We want to help learner navigate through how-to knowledge which is stored in a multi-modal way from multiple experts on the Internet.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<h3>How we address the issue</h3>
 								<p>Form previous researches, we understand that externalizing reflections and questions is beneficial for knowledge sharing between tutor and learner. Moreover, an interactive concept map can prompt learners to externalize reflections and become a useful metacognitive structure for concept-based video navigation and comprehension as well.</p>
-								<p>We present Knowledge Explorer, on which we integrate multi-model presentation of how-to knowledge. We present a user interface that learners can easily switch among different tutors' practice for the same step. Most importantly, we prompt learners to collaboratively generate a concept map to elicit the essence knowledge form multiple tutors. The detail design is presented below.</p>
-								<p>This prototype helps improve onlinehow-to knowledge transfer.</p>
+								<p>We present Knowledge Explorer, on which we integrate multi-modal presentation of how-to knowledge. We present a user interface that learners can easily switch among different tutors' practice for the same step. Most importantly, we prompt learners to collaboratively generate a concept map to elicit the essential knowledge from multiple tutors. The detailed design is presented below.</p>
+								<p>This prototype helps improve online how-to knowledge transfer.</p>
 							</div>
 						</div>
 						<span class="image featured"><img src="images/KEImplementation2.png" alt="" /></span>
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's my role in the project</h3>
-								<p>Me and my team descuss and design the project together, I'm particularly in charge of the implementation of the prototype.</p>
+								<p>I and my team discussed and designed the project together, I was particularly in charge of the implementation of the prototype.</p>
 							</div>
 						</div>
 					</div>
