--- a/Meteore.html
+++ b/Meteore.html
@@ -23,11 +23,12 @@
 							<li>
 								<a href="#" class="icon fa-angle-down">Projects</a>
 								<ul>
-									<li><a href="KE.html">Knowledge Explorer</a></li>
+									<li><a href="ARNavigation.html">AR Navigation</a></li>
 									<li><a href="WhoMatters.html">Who Matters</a></li>
-									<li><a href="Insightgram.html">Insight-gram</a></li>
-									<li><a href="HopeEnglish.html">Usability Evaluation</a></li>
 									<li><a href="VUI.html">Charles Bot</a></li>
+									<li><a href="HopeEnglish.html">Usability Evaluation</a></li>
+									<li><a href="Insightgram.html">Insight-gram</a></li>
+									<li><a href="KE.html">Knowledge Explorer</a></li>
 								</ul>
 							</li>
 							<li><a href="#" class="button">繁體中文</a></li>
@@ -57,14 +58,14 @@
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<h3>How we address the issue</h3>
-								<p>We design a social platform that everyone owns a planet in the galaxy. Users generated their individual or public goals and share them to the community. The goals would be represented as comets in the galaxy, everyone can cheer for other's individual goals and may join other's public goals. Our idea is that you can decorate your planet by the reward of joining and achieving goals. The detail design is shown below.</p>
+								<p>We design a social platform that everyone owns a planet in the galaxy. Users generated their individual or public goals and share them to the community. The goals would be represented as comets in the galaxy, everyone can cheer for other's individual goals and may join other's public goals. Our idea is that you can decorate your planet by the reward of joining and achieving goals. The detailed design is shown below.</p>
 							</div>
 						</div>
 						<span class="image featured"><img src="images/MeteoreInteraction.png" alt="" /></span>
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's my role in the project</h3>
-								<p>Me and my team descuss and design the project together, I'm particularly in charge of the implementation of the back-end of the website. I used Django(a tool developed for python) to manage the views, urls and database of the website.</p>
+								<p>My team and I discussed and designed the project together, I was particularly in charge of the implementation of the back-end of the website. I used Django(a tool developed for python) to manage the views, URLs, and database of the website.</p>
 							</div>
 						</div>
 					</div>
