--- a/VUI.html
+++ b/VUI.html
@@ -23,11 +23,12 @@
 							<li>
 								<a href="#" class="icon fa-angle-down">Projects</a>
 								<ul>
+									<li><a href="ARNavigation.html">AR Navigation</a></li>
+									<li><a href="WhoMatters.html">Who Matters</a></li>
+									<li><a href="HopeEnglish.html">Usability Evaluation</a></li>
+									<li><a href="Insightgram.html">Insight-gram</a></li>
 									<li><a href="KE.html">Knowledge Explorer</a></li>
 									<li><a href="Meteore.html">Météore</a></li>
-									<li><a href="WhoMatters.html">Who Matters</a></li>
-									<li><a href="Insightgram.html">Insight-gram</a></li>
-									<li><a href="HopeEnglish.html">Usability Evaluation</a></li>
 								</ul>
 							</li>
 							<li><a href="#" class="button">繁體中文</a></li>
@@ -50,12 +51,12 @@
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's the issue</h3>
-								<p>People frequently use mobile phone and constantly need to stay in touch with others. With the existing method, sometimes they are unable to reply to a instant message (IM) right in time. For instance, when people is driving, cooking, or walking in a hurry, they may find it difficult to take out their phone or even switch visual attention toward the phone screen. A more natural method to receive and response to IM is needed in this situation.</p>
+								<p>People frequently use mobile phone and constantly need to stay in touch with others. With the existing method, sometimes they are unable to reply to an instant message (IM) right in time. For instance, when people are driving, cooking, or walking in a hurry, they may find it difficult to take out their phone or even switch visual attention toward the phone screen. A more natural method to receive and respond to IM is needed in this situation.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<h3>How I address the issue</h3>
-								<p>A Vioce User Interface (VUI) could be a suitable solution. While existing products provide either a read out loud service for incoming notification or a speech to text text composing function, there isn't a service which combines the receiving, navigating and responding proceduals altogether to provide user a Hands-Free, Eyes-Free interaction to the mobile phone.</p>
-								<p>In order to make a prototype out of this idea, I utilized NotificationListenerService on Android to listen the notification sent to the phone. Then, a TextToSpeech library is called to read the imcoming message out loud to the user. At the same time, the PendingIntent and RemoteInputs of the imcoming notification are collected. These are the elements needed to reply for the incoming message later. The next step is to prompt the speech input. I implemented a RecognizerIntent to receive speech result. The result then be added to the RemoteInput, and sent to the message sender via PendingIntent, thus finished the procedual.</p>
+								<p>A Voice User Interface (VUI) could be a suitable solution. While existing products provide either a read out loud service for incoming notification or a speech to text text composing function, there isn't a service which combines the receiving, navigating and responding procedurals altogether to provide the user a Hands-Free, Eyes-Free interaction to the mobile phone.</p>
+								<p>In order to make a prototype out of this idea, I utilized NotificationListenerService on Android to listen to the notification sent to the phone. Then, a TextToSpeech library is called to read the incoming message out loud to the user. At the same time, the PendingIntent and RemoteInputs of the incoming notification are collected. These are the elements needed to reply for the incoming message later. The next step is to prompt the speech input. I implemented a RecognizerIntent to receive speech result. The result then is added to the RemoteInput and sent to the message sender via PendingIntent, thus finished the procedure.</p>
 								<p>The flow of the app is presented below.</p>
 							</div>
 						</div>
@@ -63,7 +64,7 @@
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What I learned</h3>
-								<p>Form this project, I gained more programming skill for Android development, especially I learned how to utilize Service to have an app run in background. Moreover, I gained a more mature understanding of how each functions in the Andriod communicate with each other. This experience helped me to become a more solid programmer and developer.</p>
+								<p>Form this project, I gained more programming skill for Android development, especially I learned how to utilize Service to have an app run in the background. Moreover, I gained a more mature understanding of how each function in the Andriod communicates with each other. This experience helped me to become a more solid programmer and developer.</p>
 								<p>Furthermore, the process of developing this idea and discussing with prof. Stanley helped a lot to improve my ability to define and state the research question clearly. This is a valuable training experience for me.</p>
 							</div>
 						</div>
