--- a/WhoMatters.html
+++ b/WhoMatters.html
@@ -23,11 +23,12 @@
 							<li>
 								<a href="#" class="icon fa-angle-down">Projects</a>
 								<ul>
+									<li><a href="ARNavigation.html">AR Navigation</a></li>
+									<li><a href="VUI.html">Charles Bot</a></li>
+									<li><a href="HopeEnglish.html">Usability Evaluation</a></li>
+									<li><a href="Insightgram.html">Insight-gram</a></li>
 									<li><a href="KE.html">Knowledge Explorer</a></li>
 									<li><a href="Meteore.html">Météore</a></li>
-									<li><a href="Insightgram.html">Insight-gram</a></li>
-									<li><a href="HopeEnglish.html">Usability Evaluation</a></li>
-									<li><a href="VUI.html">Charles Bot</a></li>
 								</ul>
 							</li>
 							<li><a href="#" class="button">繁體中文</a></li>
@@ -53,20 +54,20 @@
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's the issue</h3>
-								<p>Little research studies the impact of relationship characteristics between receivers and senders on users’ receptivity to mobile IM messages. The four receptivity measures we considered in this work are: <b>Attentiveness</b>, <b>Responsiveness</b>, <b>Interruptibility</b>, and <b>Opportuneness Moment</b></p>
+								<p>Little research studies the impact of relationship characteristics between receivers and senders on users’ receptivity to mobile IM messages. The four receptivity measures we considered in this work are: <b>Attentiveness</b>, <b>Responsiveness</b>, <b>Interruptibility</b>, and <b>Opportuneness Moment.</b></p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<h3>How we address the issue</h3>
-								<p>In order to study the impact of relationship characteristics on users’ receptivity to mobile IM messages, we focus on a subset of characteristics of relationship between two people that are measurable via self-reports and IM logs. They include Closeness, Dependence, Mobile Maintenance Expectation (MME), Answering Expectation (AE) and Perceived Obligation to Answering (POA).</p>
-								<p><img class="image left round" src="images/esm.png" alt=""/>Our general research question is: <b>when considering activity context, social context, phone interaction context, and ringer mode, to what extent these measures of relationship characteristics respectively affect the four receptivity measures.</b> We use four sources to obtain these measures: existing scales, self-report from experience sampling method (ESM), sensor data from the phone, and message logs.</p>
+								<p>In order to study the impact of relationship characteristics on users’ receptivity to mobile IM messages, we focus on a subset of characteristics of a relationship between two people that are measurable via self-reports and IM logs. They include Closeness, Dependence, Mobile Maintenance Expectation (MME), Answering Expectation (AE) and Perceived Obligation to Answering (POA).</p>
+								<p><img class="image left round" src="images/esm.png" alt=""/>Our general research question is: <b>when considering activity context, social context, phone interaction context, and ringer mode, to what extent these measures of relationship characteristics respectively affect the four receptivity measures.</b> We use four sources to obtain these measures: existing scales, self-report from the experience sampling method (ESM), sensor data from the phone, and message logs.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<h3>What we find</h3>
-								<p>Our result show that both relationship characteristics and interruption context matter to mobile IM receptivity. Interestingly, Mobile Maintenance Expectation and Activity Engagement are negatively correlated with all receptivity measures.</p>
+								<p>Our result shows that both relationship characteristics and interruption context matter to mobile IM receptivity. Interestingly, Mobile Maintenance Expectation and Activity Engagement are negatively correlated with all receptivity measures.</p>
 
 								<p><b>Interruptibility</b> is correlated with Closeness and Phone Interaction Context and is uniquely affected by whether social contacts are present.
-								<br><b>Opportune Moment</b> is correlated with Closeness and Phone Interaction Context, and is uniquely affected by Ringer Mode.
-								<br><b>Attentiveness</b> is correlated with Closeness and Phone Interaction Context and is additionally affected by Relationship Type;.
+								<br><b>Opportune Moment</b> is correlated with Closeness and Phone Interaction Context and is uniquely affected by Ringer Mode.
+								<br><b>Attentiveness</b> is correlated with Closeness and Phone Interaction Context and is additionally affected by Relationship Type.
 								<br><b>Responsiveness</b> seems to be highly distinctive from other receptivity measures. Answering Expectation is its unique predictor, which is not shared by other receptivity measures.</p>
 
 								<p>Each receptivity measures has its own set of predictors, showing conceptual differences among these measures.</p>
@@ -78,7 +79,7 @@
 								<h3>What's my role in the project</h3>
 								<p>I was in charge of designing and conducting the user research, also highly engaged in  discussions throughout the design, implementation and quantitative data analysis.</p>
 								<p>Our following work, which is in progress now, aims to predict receptivity variables and relationship characteristics. We also include qualitative analysis to find more insights. I'm in charge of the qualitative analysis.</p>
-								<p>We implement <b>Cued Retrospective Technique</b> to conduct a semi-structured interview for participants. Then, a mixture of <b>Grounded Theory</b> and <b>Evaluational Research</b> is utilized to analyze the data. One of the finding is that people tend to respond less instantly toward some of the most intimate partners if they consider the relationship to be steady and solid, while they tend to reply more quickly toward someone less intimate, due to the obligation to answer, or in order to maintain the relationship.</p>
+								<p>We implement <b>Cued Retrospective Technique</b> to conduct a semi-structured interview for participants. Then, a mixture of <b>Grounded Theory</b> and <b>Evaluational Research</b> is utilized to analyze the data. One of the findings is that people tend to respond less instantly toward some of the most intimate partners if they consider the relationship to be steady and solid, while they tend to reply more quickly toward someone less intimate, due to the obligation to answer, or in order to maintain the relationship.</p>
 							</div>
 						</div>
 					</div>
