--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2>Building a world that brings us closer <br>to each other,and to ourselves.</h2>
+							<h2>Building a world that brings us closer <br>to each other, and to ourselves.</h2>
 							<p> Engineer | Researcher | Designer of User Experience</p>
-							<p><img class="image left round2" src="images/profile.jpg" alt=""/> Though old saying "Technology Humanity", do the technologies nowadays bring more humanity to us? AI and ML allows computers to reach further, but how could we really use these breakthroughs to enrich people? I place myself in the gap between technology and humanity, my mission is <font color="#e89980">to augment human with the technology, as well as with the deep understanding and concerning of humanity.</font>
+							<p><img class="image left round2" src="images/profile.jpg" alt=""/> Though old saying "Technology Humanity", do the technologies nowadays bring more humanity to us? AI and ML allow computers to reach further, but how could we really use these breakthroughs to enrich people? I place myself in the gap between technology and humanity, my mission is <font color="#e89980">to augment human with the technology, as well as with the deep understanding and concerning of humanity.</font>
 							</p>
 							<ul class="icons">
 								<li><a style="font-size: 2em;" class="icon">Contact Me @</a></li>
