--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 							<section class="box special">
 								<span class="image featured"><img height="250" src="images/ARNavigationFront.png" alt="" /></span>
 								<h3>AR Pedestrian Navigation</h3>
-								<p><b>Project Background : </b>Research Project<br><b>Project date : </b>2018.09 - present<br><b>Project supervisor : </b>Dr. Yung-Ju Chang and Dr. Hung-Kuo Chu<br>In the observation of the most widely used digital mapping navigation system -- Googole map, we found users...<br></p>
+								<p><b>Project Background : </b>Research Project<br><b>Project date : </b>2018.09 - present<br><b>Project supervisor : </b>Dr. Yung-Ju Chang and Dr. Hung-Kuo Chu<br>In the observation of the most widely used digital mapping navigation system -- Google map, we found users...<br></p>
 								<ul class="actions special">
 									<li><a href="ARNavigation.html" class="button alt">Learn More</a></li>
 								</ul>
@@ -157,7 +157,7 @@
 							<section class="box special">
 								<span class="image featured"><img height="250" src="images/VUIFront.png" alt="" /></span>
 								<h3>Charles Bot</h3>
-								<p><b>Project Background : </b>Side Project<br><b>Project date : </b>2018.4 - 2018.6<br><b>A Hands-Free, Eyes-Free Voice User Interface on Android devices</b><br>People frequently use mobile phone and constantly to stay in touch with others. With the existing method...</p>
+								<p><b>Project Background : </b>Side Project<br><b>Project date : </b>2018.4 - 2018.6<br><b>A Hands-Free, Eyes-Free Voice User Interface on Android devices</b><br>People frequently use mobile phone and constantly need to stay in touch with others. With the existing method...</p>
 								<ul class="actions special">
 									<li><a href="VUI.html" class="button alt">Learn More</a></li>
 								</ul>
@@ -184,7 +184,7 @@
 							<section class="box special">
 								<span class="image featured"><img height="250" src="images/InsightCover.png" alt="" /></span>
 								<h3>Insight-gram</h3>
-								<p><b>Project Background :</b> Course Project<br><b>Project date :</b> 2018.06<br>We crawled and extracted keywords from posts with location tags on Instagram, since trends on instagram satifies the endemic and transient characteristics. We then cluster posts with similar keywords together...</p>
+								<p><b>Project Background :</b> Course Project<br><b>Project date :</b> 2018.06<br>We crawled and extracted keywords from posts with location tags on Instagram since trends on Instagram satisfies the endemic and transient characteristics. We then cluster posts with similar keywords together...</p>
 								<ul class="actions special">
 									<li><a href="Insightgram.html" class="button alt">Learn More</a></li>
 								</ul>
@@ -200,7 +200,7 @@
 							<section class="box special">
 								<span class="image featured"><img height="250" src="images/KEConcept.png" alt="" /></span>
 								<h3>Knowledge Explorer</h3>
-								<p><b>Project Background :</b> Course Project<br><b>Project date :</b> 2017 Fall<br><b>Project supervisor :</b> Dr. Hao-Chuan Wang<br><b>A Collaborative Concept Mapping System for Improving Online How-To Knowledge Transfer</b><br>Imagine a scenario that you are searching for tutorial...</p>
+								<p><b>Project Background :</b> Course Project<br><b>Project date :</b> 2017 Fall<br><b>Project supervisor :</b> Dr. Hao-Chuan Wang<br><b>A Collaborative Concept Mapping System for Improving Online How-To Knowledge Transfer</b><br>Imagine a scenario that you are searching for a tutorial...</p>
 								<ul class="actions special">
 									<li><a href="KE.html" class="button alt">Learn More</a></li>
 								</ul>
